feat: 부모 카테고리도 함께 반환하도록 추가